PeopleSaver/k8s/peoplesaver.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: peoplesaver-service
  namespace: peoplesaver
  labels:
    app: peoplesaver

spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app: peoplesaver
